5이닝, 1000회 평균 추가

--- a/app/views/home/simulation.erb
+++ b/app/views/home/simulation.erb
@@ -2,4 +2,5 @@
     <%=r%><br>
 <%end%><br>
 총 주자 <%=@juja%>
-총 <%=@scorerunner%>점이 났습니다.
+총 <%=@scorerunner%>점이 났습니다.<br>
+<a href="/home/simul">다시하기</a>
