--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,15 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
-
-<%= yield %>
-
+  <a href="/home/dbupload">기록 올리기</a>
+  <a href="/home/choose">선수 고르기</a>
+  <a href="/home/lineup">라인업 확인</a>
+  
+  <div class="to_center">
+    <%= yield %>
+  </div>
 </body>
 </html>
